[gd_scene load_steps=28 format=4 uid="uid://iq7b6tq8dpta"]

[ext_resource type="Script" path="res://Scripts/BubbleVision/masking_viewport.gd" id="1_877e7"]
[ext_resource type="Shader" path="res://Scripts/BubbleVision/evil_world.gdshader" id="1_vg73a"]
[ext_resource type="TileSet" uid="uid://bxyfthksffytp" path="res://Art/Environment/tileset.tres" id="2_s2ltx"]
[ext_resource type="Shader" path="res://Scripts/BubbleVision/happy_world.gdshader" id="3_3vsvy"]
[ext_resource type="Script" path="res://Scripts/PlayerCharacter/character_move.gd" id="3_mlu42"]
[ext_resource type="SpriteFrames" uid="uid://crxouodoepki2" path="res://Art/Characters/Main/mc_animations.tres" id="4_jx880"]
[ext_resource type="Script" path="res://Scripts/BubbleVision/bubble_imitator_player.gd" id="4_xt3v6"]
[ext_resource type="Texture2D" uid="uid://q5q5x7op43kl" path="res://test/test_circle.png" id="5_2gdfs"]
[ext_resource type="Script" path="res://Scripts/BubbleVision/bubble_bubble.gd" id="5_ivwod"]
[ext_resource type="Texture2D" uid="uid://c50p87fyus0cc" path="res://Art/Extras/level1_background_happy.png" id="5_qnapy"]
[ext_resource type="Script" path="res://Scripts/Meta/to_room.gd" id="6_2ye55"]
[ext_resource type="Script" path="res://Scripts/BubbleVision/bubble_imitator_player_sprite.gd" id="6_vc36w"]
[ext_resource type="Texture2D" uid="uid://bgqffjycjraga" path="res://Art/Extras/level1_background_evil.png" id="8_mxktq"]
[ext_resource type="Script" path="res://Scripts/BubbleVision/masking_sprite_happy.gd" id="8_oblpe"]
[ext_resource type="Script" path="res://Scripts/BubbleVision/masking_sprite_evil.gd" id="10_ih1p8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l885m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5pk6"]
size = Vector2(626, 212)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nm0e0"]
shader = ExtResource("1_vg73a")
shader_parameter/mask_offset = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d11qx"]
size = Vector2(626.008, 211.776)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_clgax"]
shader = ExtResource("1_vg73a")
shader_parameter/mask_offset = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5btws"]
shader = ExtResource("3_3vsvy")
shader_parameter/mask_offset = null

[sub_resource type="CircleShape2D" id="CircleShape2D_mrehf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kw412"]
size = Vector2(9, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l03c6"]
size = Vector2(6, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nit7d"]
size = Vector2(21.4601, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adqrm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28qf4"]
size = Vector2(20, 40)

[node name="Level1" type="Node2D"]

[node name="TemporaryBackgrounds" type="Node2D" parent="."]

[node name="SubViewport" type="SubViewport" parent="TemporaryBackgrounds"]
transparent_bg = true
size = Vector2i(240, 40)
render_target_update_mode = 4
script = ExtResource("1_877e7")

[node name="Bubble" type="CharacterBody2D" parent="TemporaryBackgrounds/SubViewport"]
position = Vector2(120, 0)
collision_layer = 2
collision_mask = 0
script = ExtResource("4_xt3v6")

[node name="Sprite2D" type="Sprite2D" parent="TemporaryBackgrounds/SubViewport/Bubble"]
texture = ExtResource("5_2gdfs")
script = ExtResource("6_vc36w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TemporaryBackgrounds/SubViewport/Bubble"]
scale = Vector2(2.082, 2)
shape = SubResource("CircleShape2D_l885m")

[node name="HappyWorld" type="StaticBody2D" parent="TemporaryBackgrounds"]
z_index = -1
position = Vector2(80, 180)
disable_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="TemporaryBackgrounds/HappyWorld"]
position = Vector2(233, -60)
texture = ExtResource("5_qnapy")
script = ExtResource("8_oblpe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TemporaryBackgrounds/HappyWorld"]
position = Vector2(233, -60)
shape = SubResource("RectangleShape2D_o5pk6")

[node name="EvilWorld" type="StaticBody2D" parent="TemporaryBackgrounds"]
material = SubResource("ShaderMaterial_nm0e0")
position = Vector2(60, 180)

[node name="Sprite2D" type="Sprite2D" parent="TemporaryBackgrounds/EvilWorld"]
position = Vector2(253, -60)
texture = ExtResource("8_mxktq")
script = ExtResource("10_ih1p8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TemporaryBackgrounds/EvilWorld"]
position = Vector2(252.996, -59.8881)
shape = SubResource("RectangleShape2D_d11qx")

[node name="TileMaps" type="Node2D" parent="."]
visible = false

[node name="EvilTileMap" type="Node2D" parent="TileMaps"]

[node name="TileMapLayer" type="TileMapLayer" parent="TileMaps/EvilTileMap"]
material = SubResource("ShaderMaterial_clgax")
tile_map_data = PackedByteArray("AAABAAoAAAAEAAcAAAACAAoAAAAEAAcAAAADAAoAAAAEAAcAAAAEAAoAAAAEAAcAAAAFAAoAAAAEAAcAAAAGAAoAAAABAAcAAAAHAAoAAAAEAAcAAAAIAAoAAAAEAAcAAAAJAAoAAAAEAAcAAAAKAAoAAAAEAAcAAAALAAoAAAAAAAgAAAAMAAoAAAAEAAcAAAANAAoAAAABAAcAAAAOAAoAAAAEAAcAAAAPAAoAAAAEAAcAAAAQAAoAAAAEAAcAAAARAAoAAAAEAAcAAAASAAoAAAAEAAcAAAATAAoAAAAEAAcAAAAUAAoAAAAEAAcAAAAVAAoAAAAAAAgAAAAWAAoAAAABAAcAAAAXAAoAAAAEAAcAAAAYAAoAAAAEAAcAAAAZAAoAAAAEAAcAAAAaAAoAAAAEAAcAAAAbAAoAAAAEAAcAAAAcAAoAAAAEAAcAAAAdAAoAAAAEAAcAAAAeAAoAAAAEAAcAAAABAAkAAAADAAcAAAACAAgAAAADAAcAAAACAAcAAAADAAcAAAADAAcAAAACAAcAAAADAAYAAAADAAcAAAAEAAYAAAADAAcAAAAEAAUAAAADAAcAAAAFAAUAAAADAAcAAAAFAAQAAAADAAcAAAAGAAQAAAADAAcAAAAHAAQAAAAAAAcAAAAHAAMAAAADAAcAAAAIAAMAAAADAAcAAAABAAEAAAADAAcAAAABAAIAAAADAAcAAAABAAMAAAADAAcAAAABAAQAAAADAAcAAAABAAUAAAADAAcAAAABAAYAAAADAAcAAAABAAcAAAADAAcAAAABAAgAAAADAAcAAAACAAEAAAADAAcAAAACAAIAAAADAAcAAAACAAMAAAADAAcAAAACAAQAAAADAAcAAAACAAUAAAADAAcAAAACAAYAAAADAAcAAAACAAkAAAADAAcAAAADAAEAAAADAAcAAAADAAIAAAADAAcAAAADAAMAAAADAAcAAAADAAQAAAADAAcAAAADAAUAAAADAAcAAAADAAgAAAADAAcAAAADAAkAAAADAAcAAAAEAAEAAAADAAcAAAAEAAIAAAADAAcAAAAEAAMAAAADAAcAAAAEAAQAAAADAAcAAAAEAAcAAAADAAcAAAAEAAgAAAADAAcAAAAEAAkAAAADAAcAAAAFAAEAAAADAAcAAAAFAAIAAAADAAcAAAAFAAMAAAADAAcAAAAFAAYAAAADAAcAAAAFAAcAAAADAAcAAAAFAAgAAAADAAcAAAAFAAkAAAADAAcAAAAGAAEAAAADAAcAAAAGAAIAAAADAAcAAAAGAAMAAAADAAcAAAAGAAUAAAADAAcAAAAGAAYAAAADAAcAAAAGAAcAAAADAAcAAAAGAAgAAAADAAcAAAAGAAkAAAADAAcAAAAHAAEAAAADAAcAAAAHAAIAAAADAAcAAAAHAAUAAAADAAcAAAAHAAYAAAADAAcAAAAHAAcAAAADAAcAAAAHAAgAAAADAAcAAAAHAAkAAAACAAcAAAAIAAEAAAADAAcAAAAIAAIAAAADAAcAAAAIAAQAAAADAAcAAAAIAAUAAAADAAcAAAAIAAYAAAADAAcAAAAIAAcAAAADAAcAAAAIAAgAAAADAAcAAAAIAAkAAAADAAcAAAAJAAEAAAADAAcAAAAJAAIAAAADAAcAAAAJAAMAAAADAAcAAAAJAAQAAAADAAcAAAAJAAUAAAADAAcAAAAJAAYAAAADAAcAAAAJAAcAAAADAAcAAAAJAAgAAAADAAcAAAAJAAkAAAADAAcAAAAKAAEAAAADAAcAAAAKAAIAAAADAAcAAAAKAAMAAAADAAcAAAAKAAQAAAADAAcAAAAKAAUAAAADAAcAAAAKAAYAAAADAAcAAAAKAAcAAAADAAcAAAAKAAgAAAADAAcAAAAKAAkAAAADAAcAAAALAAEAAAADAAcAAAALAAIAAAADAAcAAAALAAMAAAADAAcAAAALAAQAAAADAAcAAAALAAUAAAADAAcAAAALAAYAAAADAAcAAAALAAcAAAADAAcAAAALAAgAAAADAAcAAAALAAkAAAADAAcAAAAMAAEAAAADAAcAAAAMAAIAAAADAAcAAAAMAAMAAAADAAcAAAAMAAQAAAADAAcAAAAMAAUAAAADAAcAAAAMAAYAAAADAAcAAAAMAAcAAAADAAcAAAAMAAgAAAADAAcAAAAMAAkAAAADAAcAAAANAAEAAAADAAcAAAANAAIAAAADAAcAAAANAAMAAAADAAcAAAANAAQAAAADAAcAAAANAAUAAAADAAcAAAANAAYAAAADAAcAAAANAAcAAAADAAcAAAANAAgAAAADAAcAAAANAAkAAAADAAcAAAAOAAEAAAADAAcAAAAOAAIAAAADAAcAAAAOAAMAAAADAAcAAAAOAAQAAAADAAcAAAAOAAUAAAADAAcAAAAOAAYAAAAAAAcAAAAOAAcAAAADAAcAAAAOAAgAAAADAAcAAAAOAAkAAAADAAcAAAAPAAEAAAADAAcAAAAPAAIAAAADAAcAAAAPAAMAAAADAAcAAAAPAAQAAAADAAcAAAAPAAUAAAADAAcAAAAPAAYAAAADAAcAAAAPAAcAAAADAAcAAAAPAAgAAAACAAcAAAAPAAkAAAADAAcAAAAQAAEAAAADAAcAAAAQAAIAAAADAAcAAAAQAAMAAAADAAcAAAAQAAQAAAADAAcAAAAQAAUAAAADAAcAAAAQAAYAAAADAAcAAAAQAAcAAAADAAcAAAAQAAgAAAADAAcAAAAQAAkAAAADAAcAAAARAAEAAAADAAcAAAARAAIAAAAAAAcAAAARAAMAAAADAAcAAAARAAQAAAADAAcAAAARAAUAAAADAAcAAAARAAYAAAADAAcAAAARAAcAAAADAAcAAAARAAgAAAADAAcAAAARAAkAAAADAAcAAAASAAEAAAADAAcAAAASAAIAAAADAAcAAAASAAMAAAADAAcAAAASAAQAAAADAAcAAAASAAUAAAADAAcAAAASAAYAAAADAAcAAAASAAcAAAADAAcAAAASAAgAAAADAAcAAAASAAkAAAADAAcAAAATAAEAAAADAAcAAAATAAIAAAADAAcAAAATAAMAAAADAAcAAAATAAQAAAADAAcAAAATAAUAAAADAAcAAAATAAYAAAADAAcAAAATAAcAAAADAAcAAAATAAgAAAADAAcAAAATAAkAAAADAAcAAAAUAAEAAAADAAcAAAAUAAIAAAADAAcAAAAUAAMAAAADAAcAAAAUAAQAAAADAAcAAAAUAAUAAAADAAcAAAAUAAYAAAADAAcAAAAUAAcAAAADAAcAAAAUAAgAAAADAAcAAAAUAAkAAAADAAcAAAAVAAEAAAADAAcAAAAVAAIAAAADAAcAAAAVAAMAAAADAAcAAAAVAAQAAAADAAcAAAAVAAUAAAADAAcAAAAVAAYAAAADAAcAAAAVAAcAAAADAAcAAAAVAAgAAAADAAcAAAAVAAkAAAADAAcAAAAWAAEAAAADAAcAAAAWAAIAAAADAAcAAAAWAAMAAAADAAcAAAAWAAQAAAADAAcAAAAWAAUAAAADAAcAAAAWAAYAAAADAAcAAAAWAAcAAAADAAcAAAAWAAgAAAADAAcAAAAWAAkAAAADAAcAAAAXAAEAAAADAAcAAAAXAAIAAAADAAcAAAAXAAMAAAAAAAcAAAAXAAQAAAADAAcAAAAXAAUAAAADAAcAAAAXAAYAAAADAAcAAAAXAAcAAAADAAcAAAAXAAgAAAADAAcAAAAXAAkAAAADAAcAAAAYAAEAAAADAAcAAAAYAAIAAAADAAcAAAAYAAMAAAADAAcAAAAYAAQAAAADAAcAAAAYAAUAAAADAAcAAAAYAAYAAAADAAcAAAAYAAcAAAADAAcAAAAYAAgAAAADAAcAAAAYAAkAAAADAAcAAAAZAAEAAAADAAcAAAAZAAIAAAADAAcAAAAZAAMAAAADAAcAAAAZAAQAAAADAAcAAAAZAAUAAAADAAcAAAAZAAYAAAADAAcAAAAZAAcAAAADAAcAAAAZAAgAAAADAAcAAAAZAAkAAAADAAcAAAAaAAEAAAADAAcAAAAaAAIAAAADAAcAAAAaAAMAAAADAAcAAAAaAAQAAAADAAcAAAAaAAUAAAADAAcAAAAaAAYAAAADAAcAAAAaAAcAAAADAAcAAAAaAAgAAAADAAcAAAAaAAkAAAADAAcAAAAbAAEAAAADAAcAAAAbAAIAAAADAAcAAAAbAAMAAAADAAcAAAAbAAQAAAADAAcAAAAbAAUAAAADAAcAAAAbAAYAAAACAAcAAAAbAAcAAAADAAcAAAAbAAgAAAADAAcAAAAbAAkAAAADAAcAAAAcAAEAAAADAAcAAAAcAAIAAAADAAcAAAAcAAMAAAADAAcAAAAcAAQAAAADAAcAAAAcAAUAAAADAAcAAAAcAAYAAAADAAcAAAAcAAcAAAADAAcAAAAcAAgAAAADAAcAAAAcAAkAAAADAAcAAAAdAAEAAAADAAcAAAAdAAIAAAADAAcAAAAdAAMAAAADAAcAAAAdAAQAAAADAAcAAAAdAAUAAAADAAcAAAAdAAYAAAADAAcAAAAdAAcAAAADAAcAAAAdAAgAAAADAAcAAAAdAAkAAAADAAcAAAAeAAEAAAADAAcAAAAeAAIAAAADAAcAAAAeAAMAAAADAAcAAAAeAAQAAAADAAcAAAAeAAUAAAADAAcAAAAeAAYAAAADAAcAAAAeAAcAAAADAAcAAAAeAAgAAAADAAcAAAAeAAkAAAADAAcAAAABAAsAAAAFAAMAAGACAAsAAAAFAAMAAGADAAsAAAAFAAMAAGAEAAsAAAAFAAMAAGAFAAsAAAAFAAMAAGAGAAsAAAAFAAMAAGAHAAsAAAAFAAMAAGAIAAsAAAAFAAMAAGAJAAsAAAAFAAMAAGAKAAsAAAAFAAMAAGALAAsAAAAFAAMAAGAMAAsAAAAFAAMAAGANAAsAAAAFAAMAAGAOAAsAAAAFAAMAAGAPAAsAAAAFAAMAAGAUAAsAAAAFAAMAAGAVAAsAAAAFAAMAAGAWAAsAAAAFAAMAAGAXAAsAAAAFAAMAAGAYAAsAAAAFAAMAAGAZAAsAAAAFAAMAAGAaAAsAAAAFAAMAAGAbAAsAAAAFAAMAAGAcAAsAAAAFAAMAAGAdAAsAAAAFAAMAAGAeAAsAAAAFAAMAAGAQAAsAAAAFAAMAAGARAAsAAAAFAAMAAGASAAsAAAAFAAMAAGATAAsAAAAFAAMAAGAfAAoAAAAFAAMAADAfAAkAAAAFAAMAADAfAAgAAAAFAAMAADAfAAcAAAAFAAMAADAfAAYAAAAFAAMAADAfAAUAAAAFAAMAADAfAAQAAAAFAAMAADAfAAMAAAAFAAMAADAfAAIAAAAFAAMAADAfAAEAAAAFAAMAADAeAAAAAAAFAAMAAFAdAAAAAAAFAAMAAFAcAAAAAAAFAAMAAFAbAAAAAAAFAAMAAFAaAAAAAAAFAAMAAFAZAAAAAAAFAAMAAFAYAAAAAAAFAAMAAFAXAAAAAAAFAAMAAFAWAAAAAAAFAAMAAFAVAAAAAAAFAAMAAFAUAAAAAAAFAAMAAFATAAAAAAAFAAMAAFASAAAAAAAFAAMAAFARAAAAAAAFAAMAAFAQAAAAAAAFAAMAAFAPAAAAAAAFAAMAAFAOAAAAAAAFAAMAAFANAAAAAAAFAAMAAFAMAAAAAAAFAAMAAFALAAAAAAAFAAMAAFAKAAAAAAAFAAMAAFAJAAAAAAAFAAMAAFAIAAAAAAAFAAMAAFAHAAAAAAAFAAMAAFAGAAAAAAAFAAMAAFAFAAAAAAAFAAMAAFAEAAAAAAAFAAMAAFADAAAAAAAFAAMAAFACAAAAAAAFAAMAAFABAAAAAAAFAAMAAFAAAAEAAAAFAAMAAAAAAAIAAAAFAAMAAAAAAAMAAAAFAAMAAAAAAAQAAAAFAAMAAAAAAAUAAAAFAAMAAAAAAAYAAAAFAAMAAAAAAAcAAAAFAAMAAAAAAAgAAAAFAAQAAFAAAAAAAAAFAAAAAAAAAAsAAAAFAAMAAGAfAAsAAAAFAAAAADAfAAAAAAAFAAAAAFAAAAoAAAADAAgAAAAAAAkAAAADAAgAAAA=")
tile_set = ExtResource("2_s2ltx")

[node name="HappyTileMap" type="Node2D" parent="TileMaps"]

[node name="TileMapLayer" type="TileMapLayer" parent="TileMaps/HappyTileMap"]
material = SubResource("ShaderMaterial_5btws")
tile_map_data = PackedByteArray("AAABAAoAAAABAAEAAAACAAoAAAABAAEAAAADAAoAAAABAAEAAAAEAAoAAAABAAEAAAAFAAoAAAABAAEAAAAGAAoAAAAAAAEAAAAHAAoAAAABAAEAAAAIAAoAAAABAAEAAAAJAAoAAAABAAEAAAAKAAoAAAABAAEAAAALAAoAAAAEAAEAAAAMAAoAAAABAAEAAAANAAoAAAAAAAEAAAAOAAoAAAABAAEAAAAPAAoAAAABAAEAAAAQAAoAAAABAAEAAAARAAoAAAABAAEAAAASAAoAAAABAAEAAAATAAoAAAABAAEAAAAUAAoAAAABAAEAAAAVAAoAAAAEAAEAAAAWAAoAAAAAAAEAAAAXAAoAAAABAAEAAAAYAAoAAAABAAEAAAAZAAoAAAABAAEAAAAaAAoAAAABAAEAAAAbAAoAAAABAAEAAAAcAAoAAAABAAEAAAAdAAoAAAABAAEAAAAeAAoAAAABAAEAAAABAAkAAAADAAEAAAACAAgAAAADAAEAAAACAAcAAAADAAEAAAADAAcAAAADAAEAAAADAAYAAAADAAEAAAAEAAYAAAADAAEAAAAEAAUAAAADAAEAAAAFAAUAAAADAAEAAAAFAAQAAAADAAEAAAAGAAQAAAADAAEAAAAHAAQAAAACAAEAAAAHAAMAAAADAAEAAAAIAAMAAAADAAEAAAABAAEAAAADAAEAAAABAAIAAAADAAEAAAABAAMAAAADAAEAAAABAAQAAAADAAEAAAABAAUAAAADAAEAAAABAAYAAAADAAEAAAABAAcAAAADAAEAAAABAAgAAAADAAEAAAACAAEAAAADAAEAAAACAAIAAAADAAEAAAACAAMAAAADAAEAAAACAAQAAAADAAEAAAACAAUAAAADAAEAAAACAAYAAAADAAEAAAACAAkAAAADAAEAAAADAAEAAAADAAEAAAADAAIAAAADAAEAAAADAAMAAAADAAEAAAADAAQAAAADAAEAAAADAAUAAAADAAEAAAADAAgAAAADAAEAAAADAAkAAAADAAEAAAAEAAEAAAADAAEAAAAEAAIAAAADAAEAAAAEAAMAAAADAAEAAAAEAAQAAAADAAEAAAAEAAcAAAADAAEAAAAEAAgAAAADAAEAAAAEAAkAAAADAAEAAAAFAAEAAAADAAEAAAAFAAIAAAADAAEAAAAFAAMAAAADAAEAAAAFAAYAAAADAAEAAAAFAAcAAAADAAEAAAAFAAgAAAADAAEAAAAFAAkAAAADAAEAAAAGAAEAAAADAAEAAAAGAAIAAAADAAEAAAAGAAMAAAADAAEAAAAGAAUAAAADAAEAAAAGAAYAAAADAAEAAAAGAAcAAAADAAEAAAAGAAgAAAADAAEAAAAGAAkAAAADAAEAAAAHAAEAAAADAAEAAAAHAAIAAAADAAEAAAAHAAUAAAADAAEAAAAHAAYAAAADAAEAAAAHAAcAAAADAAEAAAAHAAgAAAADAAEAAAAHAAkAAAADAAEAAAAIAAEAAAADAAEAAAAIAAIAAAADAAEAAAAIAAQAAAADAAEAAAAIAAUAAAADAAEAAAAIAAYAAAADAAEAAAAIAAcAAAADAAEAAAAIAAgAAAADAAEAAAAIAAkAAAADAAEAAAAJAAEAAAADAAEAAAAJAAIAAAADAAEAAAAJAAMAAAADAAEAAAAJAAQAAAADAAEAAAAJAAUAAAADAAEAAAAJAAYAAAADAAEAAAAJAAcAAAADAAEAAAAJAAgAAAADAAEAAAAJAAkAAAADAAEAAAAKAAEAAAADAAEAAAAKAAIAAAADAAEAAAAKAAMAAAADAAEAAAAKAAQAAAADAAEAAAAKAAUAAAADAAEAAAAKAAYAAAADAAEAAAAKAAcAAAADAAEAAAAKAAgAAAADAAEAAAAKAAkAAAADAAEAAAALAAEAAAADAAEAAAALAAIAAAADAAEAAAALAAMAAAADAAEAAAALAAQAAAADAAEAAAALAAUAAAADAAEAAAALAAYAAAADAAEAAAALAAcAAAADAAEAAAALAAgAAAADAAEAAAALAAkAAAADAAEAAAAMAAEAAAADAAEAAAAMAAIAAAADAAEAAAAMAAMAAAADAAEAAAAMAAQAAAADAAEAAAAMAAUAAAADAAEAAAAMAAYAAAADAAEAAAAMAAcAAAADAAEAAAAMAAgAAAADAAEAAAAMAAkAAAADAAEAAAANAAEAAAADAAEAAAANAAIAAAADAAEAAAANAAMAAAADAAEAAAANAAQAAAADAAEAAAANAAUAAAADAAEAAAANAAYAAAADAAEAAAANAAcAAAADAAEAAAANAAgAAAADAAEAAAANAAkAAAADAAEAAAAOAAEAAAADAAEAAAAOAAIAAAADAAEAAAAOAAMAAAADAAEAAAAOAAQAAAADAAEAAAAOAAUAAAADAAEAAAAOAAYAAAACAAEAAAAOAAcAAAADAAEAAAAOAAgAAAADAAEAAAAOAAkAAAADAAEAAAAPAAEAAAADAAEAAAAPAAIAAAADAAEAAAAPAAMAAAADAAEAAAAPAAQAAAADAAEAAAAPAAUAAAADAAEAAAAPAAYAAAADAAEAAAAPAAcAAAADAAEAAAAPAAgAAAADAAEAAAAPAAkAAAADAAEAAAAQAAEAAAADAAEAAAAQAAIAAAADAAEAAAAQAAMAAAADAAEAAAAQAAQAAAADAAEAAAAQAAUAAAADAAEAAAAQAAYAAAADAAEAAAAQAAcAAAADAAEAAAAQAAgAAAADAAEAAAAQAAkAAAADAAEAAAARAAEAAAADAAEAAAARAAIAAAACAAEAAAARAAMAAAADAAEAAAARAAQAAAADAAEAAAARAAUAAAADAAEAAAARAAYAAAADAAEAAAARAAcAAAADAAEAAAARAAgAAAADAAEAAAARAAkAAAADAAEAAAASAAEAAAADAAEAAAASAAIAAAADAAEAAAASAAMAAAADAAEAAAASAAQAAAADAAEAAAASAAUAAAADAAEAAAASAAYAAAADAAEAAAASAAcAAAADAAEAAAASAAgAAAADAAEAAAASAAkAAAADAAEAAAATAAEAAAADAAEAAAATAAIAAAADAAEAAAATAAMAAAADAAEAAAATAAQAAAADAAEAAAATAAUAAAADAAEAAAATAAYAAAADAAEAAAATAAcAAAADAAEAAAATAAgAAAADAAEAAAATAAkAAAADAAEAAAAUAAEAAAADAAEAAAAUAAIAAAADAAEAAAAUAAMAAAADAAEAAAAUAAQAAAADAAEAAAAUAAUAAAADAAEAAAAUAAYAAAADAAEAAAAUAAcAAAADAAEAAAAUAAgAAAADAAEAAAAUAAkAAAADAAEAAAAVAAEAAAADAAEAAAAVAAIAAAADAAEAAAAVAAMAAAADAAEAAAAVAAQAAAADAAEAAAAVAAUAAAADAAEAAAAVAAYAAAADAAEAAAAVAAcAAAADAAEAAAAVAAgAAAADAAEAAAAVAAkAAAADAAEAAAAWAAEAAAADAAEAAAAWAAIAAAADAAEAAAAWAAMAAAADAAEAAAAWAAQAAAADAAEAAAAWAAUAAAADAAEAAAAWAAYAAAADAAEAAAAWAAcAAAADAAEAAAAWAAgAAAADAAEAAAAWAAkAAAADAAEAAAAXAAEAAAADAAEAAAAXAAIAAAADAAEAAAAXAAMAAAACAAEAAAAXAAQAAAADAAEAAAAXAAUAAAADAAEAAAAXAAYAAAADAAEAAAAXAAcAAAADAAEAAAAXAAgAAAADAAEAAAAXAAkAAAADAAEAAAAYAAEAAAADAAEAAAAYAAIAAAADAAEAAAAYAAMAAAADAAEAAAAYAAQAAAADAAEAAAAYAAUAAAADAAEAAAAYAAYAAAADAAEAAAAYAAcAAAADAAEAAAAYAAgAAAADAAEAAAAYAAkAAAADAAEAAAAZAAEAAAADAAEAAAAZAAIAAAADAAEAAAAZAAMAAAADAAEAAAAZAAQAAAADAAEAAAAZAAUAAAADAAEAAAAZAAYAAAADAAEAAAAZAAcAAAADAAEAAAAZAAgAAAADAAEAAAAZAAkAAAADAAEAAAAaAAEAAAADAAEAAAAaAAIAAAADAAEAAAAaAAMAAAADAAEAAAAaAAQAAAADAAEAAAAaAAUAAAADAAEAAAAaAAYAAAADAAEAAAAaAAcAAAADAAEAAAAaAAgAAAADAAEAAAAaAAkAAAADAAEAAAAbAAEAAAADAAEAAAAbAAIAAAADAAEAAAAbAAMAAAADAAEAAAAbAAQAAAADAAEAAAAbAAUAAAADAAEAAAAbAAYAAAADAAEAAAAbAAcAAAADAAEAAAAbAAgAAAADAAEAAAAbAAkAAAADAAEAAAAcAAEAAAADAAEAAAAcAAIAAAADAAEAAAAcAAMAAAADAAEAAAAcAAQAAAADAAEAAAAcAAUAAAADAAEAAAAcAAYAAAADAAEAAAAcAAcAAAADAAEAAAAcAAgAAAADAAEAAAAcAAkAAAADAAEAAAAdAAEAAAADAAEAAAAdAAIAAAADAAEAAAAdAAMAAAADAAEAAAAdAAQAAAADAAEAAAAdAAUAAAADAAEAAAAdAAYAAAADAAEAAAAdAAcAAAADAAEAAAAdAAgAAAADAAEAAAAdAAkAAAADAAEAAAAeAAEAAAADAAEAAAAeAAIAAAADAAEAAAAeAAMAAAADAAEAAAAeAAQAAAADAAEAAAAeAAUAAAADAAEAAAAeAAYAAAADAAEAAAAeAAcAAAADAAEAAAAeAAgAAAADAAEAAAAeAAkAAAADAAEAAAABAAsAAAAFAAMAAGACAAsAAAAFAAMAAGADAAsAAAAFAAMAAGAEAAsAAAAFAAMAAGAFAAsAAAAFAAMAAGAGAAsAAAAFAAMAAGAHAAsAAAAFAAMAAGAIAAsAAAAFAAMAAGAJAAsAAAAFAAMAAGAKAAsAAAAFAAMAAGALAAsAAAAFAAMAAGAMAAsAAAAFAAMAAGANAAsAAAAFAAMAAGAOAAsAAAAFAAMAAGAPAAsAAAAFAAMAAGAUAAsAAAAFAAMAAGAVAAsAAAAFAAMAAGAWAAsAAAAFAAMAAGAXAAsAAAAFAAMAAGAYAAsAAAAFAAMAAGAZAAsAAAAFAAMAAGAaAAsAAAAFAAMAAGAbAAsAAAAFAAMAAGAcAAsAAAAFAAMAAGAdAAsAAAAFAAMAAGAeAAsAAAAFAAMAAGAQAAsAAAAFAAMAAGARAAsAAAAFAAMAAGASAAsAAAAFAAMAAGATAAsAAAAFAAMAAGAfAAoAAAAFAAMAADAfAAkAAAAFAAMAADAfAAgAAAAFAAMAADAfAAcAAAAFAAMAADAfAAYAAAAFAAMAADAfAAUAAAAFAAMAADAfAAQAAAAFAAMAADAfAAMAAAAFAAMAADAfAAIAAAAFAAMAADAfAAEAAAAFAAMAADAeAAAAAAAFAAMAAFAdAAAAAAAFAAMAAFAcAAAAAAAFAAMAAFAbAAAAAAAFAAMAAFAaAAAAAAAFAAMAAFAZAAAAAAAFAAMAAFAYAAAAAAAFAAMAAFAXAAAAAAAFAAMAAFAWAAAAAAAFAAMAAFAVAAAAAAAFAAMAAFAUAAAAAAAFAAMAAFATAAAAAAAFAAMAAFASAAAAAAAFAAMAAFARAAAAAAAFAAMAAFAQAAAAAAAFAAMAAFAPAAAAAAAFAAMAAFAOAAAAAAAFAAMAAFANAAAAAAAFAAMAAFAMAAAAAAAFAAMAAFALAAAAAAAFAAMAAFAKAAAAAAAFAAMAAFAJAAAAAAAFAAMAAFAIAAAAAAAFAAMAAFAHAAAAAAAFAAMAAFAGAAAAAAAFAAMAAFAFAAAAAAAFAAMAAFAEAAAAAAAFAAMAAFADAAAAAAAFAAMAAFACAAAAAAAFAAMAAFABAAAAAAAFAAMAAFAAAAEAAAAFAAMAAAAAAAIAAAAFAAMAAAAAAAMAAAAFAAMAAAAAAAQAAAAFAAMAAAAAAAUAAAAFAAMAAAAAAAYAAAAFAAMAAAAAAAcAAAAFAAMAAAAAAAgAAAAFAAQAAFAAAAAAAAAFAAAAAAAAAAsAAAAFAAMAAGAfAAsAAAAFAAAAADAfAAAAAAAFAAAAAFAAAAoAAAADAAgAADAAAAkAAAADAAgAADA=")
tile_set = ExtResource("2_s2ltx")

[node name="PlayerCharacter" type="Node2D" parent="."]
position = Vector2(600, 199)

[node name="Bubble" type="CharacterBody2D" parent="PlayerCharacter"]
position = Vector2(80, -80)
collision_layer = 2
collision_mask = 0
script = ExtResource("5_ivwod")

[node name="Sprite2D" type="Sprite2D" parent="PlayerCharacter/Bubble"]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("5_2gdfs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCharacter/Bubble"]
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_mrehf")

[node name="CharacterBody2D" type="CharacterBody2D" parent="PlayerCharacter"]
collision_layer = 2
collision_mask = 4
script = ExtResource("3_mlu42")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerCharacter/CharacterBody2D"]
position = Vector2(0, 3)
sprite_frames = ExtResource("4_jx880")
animation = &"walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCharacter/CharacterBody2D"]
visible = false
position = Vector2(1, 9)
shape = SubResource("RectangleShape2D_kw412")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerCharacter/CharacterBody2D"]
visible = false
position = Vector2(1, -5)
shape = SubResource("RectangleShape2D_l03c6")

[node name="Camera2D" type="Camera2D" parent="PlayerCharacter/CharacterBody2D"]
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 0
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0

[node name="BuildingStructure" type="Node2D" parent="."]

[node name="Floor" type="Node2D" parent="BuildingStructure"]
position = Vector2(320, 230)
scale = Vector2(36.328, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="BuildingStructure/Floor"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingStructure/Floor/StaticBody2D"]
position = Vector2(0.644633, 0)
shape = SubResource("RectangleShape2D_nit7d")

[node name="Walls" type="Node2D" parent="BuildingStructure"]
position = Vector2(10, 110)
scale = Vector2(1, 8.96)

[node name="StaticBody2D" type="StaticBody2D" parent="BuildingStructure/Walls"]
position = Vector2(620, -0.111607)
scale = Vector2(1, 1.23246)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingStructure/Walls/StaticBody2D"]
shape = SubResource("RectangleShape2D_adqrm")

[node name="StaticBody2D2" type="StaticBody2D" parent="BuildingStructure/Walls"]
position = Vector2(0, -3.125)
scale = Vector2(1, 1.08157)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingStructure/Walls/StaticBody2D2"]
shape = SubResource("RectangleShape2D_adqrm")

[node name="NextRoom" type="Node2D" parent="."]
position = Vector2(-320, 20)

[node name="Area2D" type="Area2D" parent="NextRoom"]
position = Vector2(320, 180)
collision_layer = 128
collision_mask = 2
script = ExtResource("6_2ye55")
metadata/next_room = "FinalBoss"

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextRoom/Area2D"]
shape = SubResource("RectangleShape2D_28qf4")
